<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/valor1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor_1"
        android:inputType="number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/valor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor_2"
        android:inputType="number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/valor3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor_3"
        android:inputType="number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/valor4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor_4"
        android:inputType="number"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btn01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organizar"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btn02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/ordemlidaView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordem_Lida" />

        <TextView
            android:id="@+id/tvOrdemLida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/crescenteView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordem_crescente"/>

        <TextView
            android:id="@+id/tvOrdemCrescente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/decrescenteView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordem_decrescente" />

        <TextView
            android:id="@+id/tvOrdemDecrescente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

</LinearLayout>